# dev_portfolio_backend

./: Cargo.toml  portfolio.db  projects.db  projects.db-shm  projects.db-wal
.sqlx/: query-8482da66fb4c815cf21576e0b5c8121f5cb3a96b0a3f5e8241dbd677860c62af.json
migrations/: 20250314095820_create_projects_table.sql
src/: main.rs
