[package]
name = "dev_portfolio_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"